# fit-analyze

./: .gitignore  README.md  export_fit.py  pyproject.toml  requirements.txt
.skills/: project.md
docs/analysis/: ANALYSIS.md  METRICS.md  PROMPTING.md  REPORT.md  VALIDATION.md
docs/athlete/: ATHLETE_PROFILE.md  GOALS.md
docs/coaching/: COACHING.md
docs/data/: AREAS_FOR_IMPROVEMENT.md  CONVERTER.md  SCHEMA.md  SPECIFICATION.md
docs/project/: CHANGELOG.md  CONTRIBUTING.md  PLAN.md  ROADMAP.md
fit_exporter/: __init__.py  __main__.py  analyzer.py  converter.py  reporter.py  validator.py
tests/: test_validator.py
